--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
-.App {
-  text-align: center;
+/* .Codetrain {
+  color: rgba(14, 6, 128, 0.804);
+  margin-bottom: 10px;
+} */
+
+body {
+  background-color: rgba(152, 152, 165, 0.223);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Home CSS*/
+
+header {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  background-color: rgba(249, 242, 242, 0.965);
+  padding: 8px 0px;
+  border-bottom: 1px solid rgba(198, 198, 4, 0.713);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Ball {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  padding-top: 5px;
+  width: auto;
+}
+
+.Search-Container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: auto;
+}
+
+.Search {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgba(147, 144, 144, 0.188);
+  border-radius: 40px;
+  padding: 8px 21px 8px 21px;
+  width: fit-content;
+}
+
+.Search input {
+  border: none;
+  background: transparent;
+  margin-left: 7px;
+  font-size:medium;
+}
+
+.Search input:focus {
+  outline: none;
+}
+
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(20, 17, 17);
+  padding: 15px 0px 10px 0px;
+  width: 100vw;
+}
+
+.All {
+  margin-top: 78px;
+}
+
+/* Note CSS */
+
+.note-container {
+  background-color: rgb(255, 255, 255);
+  width: auto;
+  margin-right: 5px;
+  border: 1px solid rgba(137, 137, 130, 0.496);
+}
+
+.Plus {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 30px;
+  width: 30px;
+  border-radius: 15px;
+  background-color: rgba(14, 6, 128, 0.495);
 }
 
-.App-link {
-  color: #61dafb;
+.Plus:hover{
+  background-color: rgba(198, 4, 75, 0.574);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Brand {
+  padding: 5px 0px 5px 20px;
+  border-bottom: 1px solid rgba(137, 137, 130, 0.496);
+  background-color: rgba(198, 198, 4, 0.713);
+}
+
+textarea {
+  width: 64vw;
+  height: 70vh;
+  padding: 20px 2px 20px 25px;
+  resize: none;
+  border: none;
+}
+
+textarea:focus {
+outline: none;
+}
+
+/* Notes CSS */
+
+.notes-container {
+  background-color: rgb(255, 255, 255);
+  width: auto;
+  border: 1px solid rgba(137, 137, 130, 0.496);
+  margin: 0px 0px 15px 5px;
+}
+
+.Container-Edit-Delete{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(137, 137, 130, 0.496);
+  padding: 1px 0px;
+  background-color: rgba(147, 144, 144, 0.477);
 }
